tests/macros/plugin/page_size.rs
fn main() {
    inquisition::questions![Plugin { page_size: todo!() }];
}
